--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jsonwebtoken": "^7.1.9",
     "lodash": "^4.17.10",
     "memdown": "^1.2.4",
+    "nforce": "^1.10.0",
     "pouchdb-node": "^6.1.2",
     "request": "^2.73.0"
   },
